melior/src/dialect/snapshots/melior__dialect__llvm__tests__compile_func.snap
---
source: melior/src/dialect/llvm.rs
expression: module.as_operation()
---
module attributes {llvm.data_layout = ""} {
  llvm.func @printf(!llvm.ptr, ...) -> i32
}

