melior/src/dialect/snapshots/melior__dialect__llvm__tests__compile_null_ptr.snap
---
source: melior/src/dialect/llvm.rs
expression: module.as_operation()
---
module {
  llvm.func @foo() -> !llvm.ptr {
    %0 = llvm.mlir.zero : !llvm.ptr
    llvm.return %0 : !llvm.ptr
  }
}
